Fix horizontal scroll and layout in Android 4.4.2

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -111,7 +111,7 @@ h4.title a {
 }
 
 .preferences ul li {
-  padding: 13px 20px;
+  padding: 16px 10px 16px 16px;
   border-bottom: 1px solid #E9E9EC;
 }
 
